{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 27,
  "lineage": "f76a7244-4a30-203a-dc9b-5c6aa26743d3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-APP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-APP",
            "location": "southeastasia",
            "name": "NSG-APP",
            "resource_group_name": "PROD-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDPFromALL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-DB",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-DB",
            "location": "southeastasia",
            "name": "NSG-DB",
            "resource_group_name": "PROD-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPSFromALL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-WEB",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-WEB",
            "location": "southeastasia",
            "name": "NSG-WEB",
            "resource_group_name": "PROD-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDPFromALL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "prod-DB-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.32/28",
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/virtualNetworks/PROD-vNET/subnets/PROD-DB-SUBNET",
            "name": "PROD-DB-SUBNET",
            "network_security_group_id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-DB",
            "resource_group_name": "PROD-RG",
            "virtual_network_name": "PROD-vNET"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG-DB",
            "azurerm_resource_group.PROD",
            "azurerm_virtual_network.PROD-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "prod-app-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.16/28",
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/virtualNetworks/PROD-vNET/subnets/PROD-APP-SUBNET",
            "name": "PROD-APP-SUBNET",
            "network_security_group_id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-APP",
            "resource_group_name": "PROD-RG",
            "virtual_network_name": "PROD-vNET"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG-APP",
            "azurerm_resource_group.PROD",
            "azurerm_virtual_network.PROD-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "prod-frondend-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/28",
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/virtualNetworks/PROD-vNET/subnets/PROD-WEB-SUBNET",
            "name": "PROD-WEB-SUBNET",
            "network_security_group_id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-WEB",
            "resource_group_name": "PROD-RG",
            "virtual_network_name": "PROD-vNET"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG-WEB",
            "azurerm_resource_group.PROD",
            "azurerm_virtual_network.PROD-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "PROD-vNet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.1.0/24"
            ],
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/virtualNetworks/PROD-vNET",
            "location": "southeastasia",
            "name": "PROD-vNET",
            "resource_group_name": "PROD-RG",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/28",
                "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/virtualNetworks/PROD-vNET/subnets/PROD-WEB-SUBNET",
                "name": "PROD-WEB-SUBNET"
              },
              {
                "address_prefix": "192.168.1.16/28",
                "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/virtualNetworks/PROD-vNET/subnets/PROD-APP-SUBNET",
                "name": "PROD-APP-SUBNET"
              },
              {
                "address_prefix": "192.168.1.32/28",
                "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/virtualNetworks/PROD-vNET/subnets/PROD-DB-SUBNET",
                "name": "PROD-DB-SUBNET",
                "security_group": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-DB"
              }
            ],
            "tags": {
              "environment": "Terraform"
            }
          },
          "depends_on": [
            "azurerm_resource_group.PROD"
          ]
        }
      ]
    }
  ]
}